# mnemos

./: .gitignore  DEPLOY.md  FEATURE_IDEAS.md  README.md  ROADMAP.md
app/: server.py
mcp-server/: .dockerignore  .env.example  Dockerfile  README.md  app.py  auth_provider.py  db.py  pyproject.toml  requirements.txt  server.py
mcp-server/deploy/: Caddyfile  mnemos-mcp.service
site/: package-lock.json  package.json
site/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  loading.tsx  page.tsx
site/app/auth/callback/: route.ts
site/app/auth/error/: page.tsx
site/app/dashboard/: page.tsx
site/app/docs/: page.tsx
site/app/oauth/consent/: route.ts
site/components/: CopyButton.tsx  DashboardHeading.tsx  DocsContent.tsx  LandingSection.tsx  Logo.tsx  McpConnect.tsx  MemoryList.tsx  SignOutButton.tsx
site/lib/supabase/: middleware.ts  server.ts
